# bot_project

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
models/: Cargo.toml
models/src/: lib.rs
notion/: Cargo.toml
notion/src/: document.rs  lib.rs  spending.rs
rust_bot/: Cargo.toml
rust_bot/src/: main.rs
scheduler/: Cargo.toml
scheduler/src/: main.rs
telegram-bot/src/: add_check.rs  remain.rs
