[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
env-file-reader = "0.3.0"
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.0"
reqwest = "0.11.13"
serde = "1.0.147"
serde_json = "1.0.88"
teloxide = { version = "0.11.0", features = ["full"]}
tokio = { version = "1.19.2", features = ["macros", "time"] }
models = { path = "../models" }
notion = { path = "../notion" }
