[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.12.0", features = ["attributes", "tokio1"]}
chrono = "0.4.23"
job_scheduler = "1.2.1"
models = { path = "../models" }
reqwest = { version="0.11.13", features = ["blocking", "json"] }
notion = { path = "../notion" }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
